@@ -33,6 +33,7 @@ struct AVFrame;
 struct AVIOContext;
 
 class FFmpegContent;
+class FFmpegAudioStream;
 class Log;
 
 class FFmpeg
@@ -51,6 +52,10 @@ public:
 protected:
 	AVCodecContext* video_codec_context () const;
 	AVCodecContext* subtitle_codec_context () const;
+	ContentTime pts_offset (
+		std::vector<boost::shared_ptr<FFmpegAudioStream> > audio_streams, boost::optional<ContentTime> first_video, double video_frame_rate
+		) const;
+
 	static FFmpegSubtitlePeriod subtitle_period (AVSubtitle const &);
 
 	boost::shared_ptr<const FFmpegContent> _ffmpeg_content;
